--- a/Mapping_GeoJSON_Points/index.html
+++ b/Mapping_GeoJSON_Points/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin=""/>
+    <!-- d3 JavaScript -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <!-- Our CSS -->
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
     <!-- The div that holds our map -->
@@ -24,6 +28,4 @@
     <script type="text/javascript" src="static/js/cities.js"></script>
     <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
-    <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </html>
